--- a/design/styles.css
+++ b/design/styles.css
@@ -5,12 +5,18 @@
 }
 
 html, body {
-  height: 100%;
   font-family: 'Inter', sans-serif;
   font-size: 15px;
+  font-weight: 400; /* Regular */
   color: #1c1c1c;
 }
 
+.light-text {
+  font-family: 'Inter', sans-serif;
+  font-weight: 300; /* Light */
+}
+
+/* Layout */
 body {
   display: flex;
   justify-content: center;
@@ -21,18 +27,53 @@ body {
   margin: 15vh;
 }
 
-.nav {
-  width: 100%;
-  display: flex;
-  justify-content: flex-end;
-  margin-bottom: 20px;
-}
-
 .inner-container {
   display: flex;
 }
 
+/* Navigation */
+.nav {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 3vh;
+}
 
+.nav-icon {
+  margin-left: 25px;
+}
+
+.nav-icon > img {
+  padding: 3px;
+}
+
+
+/* Footer */
+.footer {
+  position: fixed;
+  bottom: 4vh;
+  left: 50%;
+  transform: translateX(-50%); /* moves the element back by half its width, centering it */
+  display: flex;
+  gap: 12px;
+  align-items: center;
+}
+
+
+/* Chart */
+.chart-card {
+  padding: 40px;
+  height: 400px;
+  margin-right: 35px;
+  background: linear-gradient(135deg, rgba(255,255,255,0.7) 4.6%, rgba(255,255,255,0.5) 100%);
+  border-radius: 16px;
+  box-shadow: 0px 0px 14px -1px rgba(128, 128, 128, 0.07);
+  border: 1.5px solid;
+  border-image: linear-gradient(135deg, rgba(255,255,255,0.5) 0%, rgba(255,255,255,0) 50%, #EFF4F8 75%, rgba(239,244,248,0.5) 100%) 1;
+  backdrop-filter: blur(20px);
+}
+
+/* Sidebar */
 .sidebar {
   display: flex;
   flex-direction: column;
@@ -40,31 +81,54 @@ body {
   gap: 20px;
 }
 
-.footer {
-  position: fixed;
-  bottom: 20px;
-  left: 50%;
-  transform: translateX(-50%);
-  padding: 10px 20px;
+.sidebar .small-text {
+  font-size: 13px;
+  font-weight: 400;
 }
 
-.inner-footer {
-  display: flex;
-  align-items: space-between;
+.sidebar .medium-text {
+  font-size: 16px;
+}
+.sidebar .big-text {
+  font-size: 32px;
 }
 
-.box {
-  position: relative;
-  width: 243px;
-  height: 111px;
+.sidebar-card {
+  width: 220px;
+  height: 110px;
+  padding: 18px;
   background: linear-gradient(135deg, rgba(255,255,255,0.7) 0%, rgba(255,255,255,0.5) 100%);
   border-radius: 16px;
   box-shadow: 0px 0px 14px -1px rgba(128, 128, 128, 0.07);
   border: 1px solid;
   border-image: linear-gradient(135deg, rgba(255,255,255,0.5) 0%, rgba(255,255,255,0) 50%, rgba(234,199,239,0) 75%, rgba(234,199,239,0.5) 100%) 1;
   backdrop-filter: blur(20px);
-  margin-bottom: 16px;
-  padding: 20px;
+}
+
+
+
+/* Price Card */
+.price-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.price-value {
+  align-self: center;
+}
+
+.price-card-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 12px;
+}
+
+.price-card-top > div {
+  display: flex;
+  align-items: center;
+  gap: 7px;
 }
 
 /* Latency Card */
@@ -75,83 +139,18 @@ body {
   justify-content: center;
 }
 
-.latency-label {
-  font-size: 13px;
-  font-weight: 400;
-  color: #1C1C1C;
-  margin-bottom: 8px;
-}
-
-.latency-value {
-  font-size: 32px;
-  font-weight: 400;
-  color: #1C1C1C;
-}
-
-/* Price Card */
-.price-card-top {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 10px;
-}
-
-.price-card-left {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-}
-
-.price-btc-icon {
-  width: 16px;
-  height: 16px;
-}
-
-.price-symbol {
-  font-size: 13px;
-  font-weight: 400;
-  color: #1C1C1C;
-}
-
-.price-card-center {
-  flex: 1;
-  display: flex;
-  justify-content: center;
-}
-
-.price-value {
-  font-size: 32px;
-  font-weight: 400;
-  color: #1C1C1C;
-}
-
-.price-card-right {
-  display: flex;
-  align-items: center;
-  gap: 4px;
-}
-
-.price-up-arrow {
-  width: 10px;
-  height: 10px;
-}
-
-.price-change {
-  font-size: 13px;
-  font-weight: 400;
-  color: #09A249;
-}
 
 /* Small box */
-.box-row {
+.small-box-container {
   display: flex;
+  align-items: center;
   justify-content: space-between;
-  gap: 5px;
+  gap: 10px;
 }
 
 .small-box {
-  height: 65px;
-  width: 68px;
+  height: 59px;
+  width: 62px;
   background: linear-gradient(135deg, rgba(255,255,255,0.7) 0%, rgba(255,255,255,0.5) 100%);
   border-radius: 16px;
   box-shadow: 0px 0px 14px -1px rgba(128, 128, 128, 0.07);
@@ -161,12 +160,6 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-.small-box-label {
-  font-size: 16px;
-  font-weight: 400;
-  color: #1C1C1C;
 }
 
 .btc-box {
@@ -187,26 +180,4 @@ body {
   font-weight: 600;
   color: #FFF;
   font-family: 'Inter', sans-serif;
-}
-
-/* chart */
-.chart-card {
-  width: 800px;
-  height: 371px;
-  margin-right: 20px;
-  background: linear-gradient(135deg, rgba(255,255,255,0.7) 4.6%, rgba(255,255,255,0.5) 100%);
-  border-radius: 16px;
-  box-shadow: 0px 0px 14px -1px rgba(128, 128, 128, 0.07);
-  border: 1.5px solid;
-  border-image: linear-gradient(135deg, rgba(255,255,255,0.5) 0%, rgba(255,255,255,0) 50%, #EFF4F8 75%, rgba(239,244,248,0.5) 100%) 1;
-  backdrop-filter: blur(20px);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.chart-img {
-  width: 612.5px;
-  height: 292px;
-  object-fit: contain;
 }
