--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -1,32 +1,25 @@
+@import url('https://fonts.googleapis.com/css?family=Inter:300,400,500,600&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-
-html, body {
-  font-family: 'Inter', sans-serif;
-  font-size: 15px;
-  font-weight: 400; /* Regular */
-  color: #1c1c1c;
-  background-color: rgb(250, 255, 254);
-}
-
-body{
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    border: 0;
-    padding: 0;
-}
-* {
   user-select: none;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
 }
 
-div{
+html, body {
+  font-family: 'Inter', sans-serif;
+  font-size: 15px;
+  font-weight: 400;
+  color: #1c1c1c;
+  background-color: rgb(250, 255, 254);
+  -webkit-font-smoothing: antialiased;
+}
+
+div {
   cursor: default;
 }
 
@@ -35,23 +28,24 @@ a {
   color: inherit;
 }
 
-
-/* Default Card */
 .default-card {
   background-color: #fff;
-  border: 1px solid;
-  border-color: #dadada;
+  border: 1px solid #dadada;
   border-radius: 16px;
 }
 
-/* Layout */
 body {
   display: flex;
   justify-content: center;
   position: relative;
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  border: 0;
+  padding: 0;
 }
 
-.outer-container{
+.outer-container {
   margin: 15vh;
 }
 
@@ -59,7 +53,6 @@ body {
   display: flex;
 }
 
-/* Navigation */
 .nav {
   width: 100%;
   display: flex;
@@ -75,19 +68,16 @@ body {
   padding: 3px;
 }
 
-
-/* Footer */
 .footer {
   position: fixed;
   bottom: 4vh;
   left: 50%;
-  transform: translateX(-50%); /* moves the element back by half its width, centering it */
+  transform: translateX(-50%);
   display: flex;
   gap: 12px;
   align-items: center;
 }
 
-/* Chart */
 .chart-card {
   padding: 40px;
   height: 400px;
@@ -97,7 +87,6 @@ body {
   border-radius: 25px;
 }
 
-/* Sidebar */
 .sidebar {
   display: flex;
   flex-direction: column;
@@ -113,6 +102,7 @@ body {
 .sidebar .medium-text {
   font-size: 16px;
 }
+
 .sidebar .big-text {
   font-size: 32px;
 }
@@ -123,8 +113,6 @@ body {
   padding: 18px;
 }
 
-
-/* Price Card */
 .price-card {
   display: flex;
   flex-direction: column;
@@ -148,7 +136,6 @@ body {
   gap: 7px;
 }
 
-/* Latency Card */
 .latency-card {
   display: flex;
   flex-direction: column;
@@ -156,8 +143,6 @@ body {
   justify-content: center;
 }
 
-
-/* Small box */
 .small-box-container {
   display: flex;
   align-items: center;
@@ -173,11 +158,10 @@ body {
   justify-content: center;
 }
 
-/* Custom Symbol Box */
 .btc-box {
   color: #ffffff;
   font-size: 16px;
   font-weight: 600;
   border: none;
   background: rgb(255, 149, 0);
-}
+} 
