--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -165,3 +165,19 @@ body {
   border: none;
   background: rgb(255, 149, 0);
 } 
+
+.eth-box {
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 600;
+  border: none;
+  background: rgb(150, 85, 224);
+} 
+
+.xrp-box {
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 600;
+  border: none;
+  background: rgb(9, 172, 178);
+} 
