--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -46,7 +46,7 @@ body {
 }
 
 .outer-container {
-  margin: 15vh;
+  margin: 12vh;
 }
 
 .inner-container {
@@ -178,4 +178,16 @@ body {
   font-size: 27px;
   border: none;
   background: none;
+}
+
+.site-explanation {
+  margin: 20px;
+  max-width: 670px;
+}
+
+.site-explanation p {
+  font-size: 13px;
+  margin-bottom: 16px;
+  color: #858d9a;
+  font-weight: 400;
 }
